[package]
name        = "tjson"
description = "Tagged JSON (TJSON) parser/serializer based on serde"
version     = "0.0.0"
license     = "MIT"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://www.tjson.org"
repository  = "https://github.com/tjson/tjson-rs"
readme      = "README.md"
categories  = ["encoding"]
keywords    = ["encoding", "json", "serialization", "serde"]
