[package]
name        = "tjson"
description = "Tagged JSON (TJSON) parser/serializer based on serde"
version     = "0.0.0"
license     = "MIT/Apache-2.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://www.tjson.org"
repository  = "https://github.com/tjson/tjson-rust"
readme      = "README.md"
categories  = ["encoding"]
keywords    = ["encoding", "json", "serialization", "serde"]

[badges]
travis-ci = { repository = "tjson/tjson-rust" }

[dependencies]
itoa = "^0.3"
dtoa = "^0.4"
num-traits = "0.1.32"
serde = "^1.0"

[dependencies.chrono]
version = "^0.4.9"
features = ["serde"]

[dependencies.linked-hash-map]
version = "^0.4"
optional = true

[dependencies.ordered-float]
version = "^0.4"
features = ["serde"]

[dev-dependencies]
serde_bytes = "0.10"
serde_derive = "1.0"

### FEATURES #################################################################

[features]
default = []

# Use LinkedHashMap rather than BTreeMap as the underlying implementation of
# the Map and Set types used by tjson::Value. This allows data to be read into
# a Value and written back while preserving the original element ordering.
preserve_order = ["linked-hash-map"]
